--- a/app/src/main/res/layout/task_recycler_view.xml
+++ b/app/src/main/res/layout/task_recycler_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/item_recycler_view"
+        android:id="@+id/task_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white" />
