--- a/app/src/main/res/layout/task_recycler_view_item.xml
+++ b/app/src/main/res/layout/task_recycler_view_item.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="10dp">
 
     <TextView
-        android:id="@+id/item_name"
+        android:id="@+id/task_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
