--- a/app/src/main/res/layout/task_recycler_view_item.xml
+++ b/app/src/main/res/layout/task_recycler_view_item.xml
@@ -1,14 +1,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:paddingTop="10dp"
     android:paddingBottom="10dp">
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imgDragHandler"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="8dp"
+        app:tint="@color/black"
+        android:src="@drawable/ic_launcher_background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <TextView
         android:id="@+id/task_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:paddingStart="15dp"
+        android:paddingBottom="10dp"
+        android:paddingEnd="15dp"
+        android:paddingTop="10dp" />
+
 </LinearLayout>
