--- a/app/src/main/res/layout/task_recycler_view_item.xml
+++ b/app/src/main/res/layout/task_recycler_view_item.xml
@@ -5,15 +5,18 @@
     android:paddingTop="10dp"
     android:paddingBottom="10dp">
 
+    <CheckBox
+        android:id="@+id/task_is_complete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp" />
+
     <TextView
         android:id="@+id/task_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textColor="@color/black"
-        android:paddingStart="15dp"
-        android:paddingBottom="10dp"
-        android:paddingEnd="15dp"
-        android:paddingTop="10dp" />
+        android:textColor="@color/black" />
 
 </LinearLayout>
